[package]
name = "svf"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"
repository = "https://github.com/adamgreig/svf"
description = "Serial Vector Format (SVF) file parser"
license = "MIT"

[dependencies]
nom = "6.1"
nom_locate = "3.0"
thiserror = "1.0"
log = "0.4"

[[example]]
name = "parse_file"
